--- a/git.ini
+++ b/git.ini
@@ -7,7 +7,7 @@
 
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/loen8968/ruleclash/refs/heads/main/Direct.list
-ruleset=🚀 节点选择,
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/loen8968/ruleclash/refs/heads/main/ProxyLite.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/loen8968/ruleclash/refs/heads/main/AI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
